--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     var ctx = document.getElementById("myChart4").getContext('2d');
     var myChart = new Chart(ctx, {
         type: 'bar',
+        type: 'Sản lượng điện truyền tải (Triệu kWh)',
         data: {
             labels: labels,
             datasets: [{
