--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
     var ctx = document.getElementById("myChart4").getContext('2d');
     var myChart = new Chart(ctx, {
         type: 'bar',
-        type: 'Sản lượng điện truyền tải (Triệu kWh)',
         data: {
             labels: labels,
             datasets: [{
@@ -264,6 +263,10 @@
             responsive: true,
             maintainAspectRatio: true,
             legend: { position: 'bottom' },
+            title: {
+                      display: true,
+                      text: 'Sản lượng điện truyền tải (Triệu kWh)'
+                  },
         }
     });
     // var numberWithCommas = function (x) {
