--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     function showTemperatures(data_list, title) {
         console.log(title);
         document.getElementById('toolTip1').innerHTML =
-            '<ul><p>Sản lượng điện truyền tải (Triệu kWh) </p>d<h3>' + title + '</h3><li>' + data_list.join('</li><li>') + '</li></ul>'
+            '<ul><p>Sản lượng điện truyền tải (Triệu kWh) </p><h3>' + title + '</h3><li>' + data_list.join('</li><li>') + '</li></ul>'
     }
 
 
