--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         body {
             background-color: #fff;
         }
-
+        #container {
+            width: 80%;
+            height: 80%;
+            margin: 0;
+            padding: 0;
+        }
         .wrapper {
             width: 80%;
             display: block;
