--- a/combile-chart-1.html
+++ b/combile-chart-1.html
@@ -81,10 +81,10 @@
                 label: 'Data 1',
                 data: data1,
                 backgroundColor: [
-                    'rgba(0, 0, 0, 0.2)'
+                    '#2A0E3D'
                 ],
                 borderColor: [
-                    'rgba(0, 0, 0, 1)'
+                    '#2A0E3D'
                 ],
                 borderWidth: 1,
                 order: 2,
@@ -96,12 +96,11 @@
                 label: 'Data 2',
                 data: data2,
                 backgroundColor: [
-                    'rgba(255, 26, 104, 0.2)',
+                    '#F2DD39'
                 ],
                 borderColor: [
-                    'rgba(255, 26, 104, 1)',
+                    '#F2DD39'
                 ],
-
                 borderWidth: 1,
                 order: 2,
                 datalabels: {
@@ -123,10 +122,10 @@
                     { x: 190, y: 200 }
                 ],
                 backgroundColor: [
-                    'rgba(0, 0, 0, 1)',
+                    '#DAA622',
                 ],
                 borderColor: [
-                    'rgba(0, 0, 0, 1)',
+                    '#DAA622',
                 ],
                 borderWidth: 1,
                 tension: 0.4,
