--- a/combile-chart-2.html
+++ b/combile-chart-2.html
@@ -53,17 +53,17 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js"
         integrity="sha512-JPcRR8yFa8mmCsfrw4TNte1ZvF1e3+1SdGMslZvmrzDYxS69J7J49vkFL8u6u8PlPJK+H3voElBtUCzaXj+6ig=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script> 
+    <script>
         const data = {
             labels: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10'],
             datasets: [{
                 label: 'Data 1',
                 data: [50, 100, 100, 100, 100, 100, 100, 100, 100, 100],
                 backgroundColor: [
-                    'rgba(0, 0, 0, 0.2)'
+                    '#2A0E3D'
                 ],
                 borderColor: [
-                    'rgba(0, 0, 0, 1)'
+                    '#2A0E3D'
                 ],
                 borderWidth: 1,
                 order: 2,
@@ -75,12 +75,11 @@
                 label: 'Data 2',
                 data: [50, 10, 20, 30, 40, 50, 60, 70, 80, 90],
                 backgroundColor: [
-                    'rgba(255, 26, 104, 0.2)',
+                    '#F2DD39'
                 ],
                 borderColor: [
-                    'rgba(255, 26, 104, 1)',
+                    '#F2DD39'
                 ],
-
                 borderWidth: 1,
                 order: 2,
                 datalabels: {
@@ -91,10 +90,10 @@
                 label: 'Data line',
                 data: [100, 110, 120, 130, 140, 150, 160, 170, 180, 190],
                 backgroundColor: [
-                    'rgba(0, 0, 0, 1)',
+                    '#DAA622',
                 ],
                 borderColor: [
-                    'rgba(0, 0, 0, 1)',
+                    '#DAA622',
                 ],
                 borderWidth: 1,
                 tension: 0.4,
@@ -113,7 +112,7 @@
             type: 'bar',
             data,
             options: {
-                
+
                 responsive: true,
                 // maintainAspectRatio: false,
                 plugins: {
