--- a/combile-chart-1.html
+++ b/combile-chart-1.html
@@ -155,6 +155,7 @@
                     datalabels: {
                         // anchor: 'end',
                         align: 'top',
+                        display:false,
                         //     formatter: (value, context) => {
                         //         const datasetArray = [];
                         //         let dataAll = context.chart.data.datasets;
