--- a/combile-chart-2.html
+++ b/combile-chart-2.html
@@ -112,16 +112,15 @@
             type: 'bar',
             data,
             options: {
-
                 responsive: true,
                 // maintainAspectRatio: false,
                 plugins: {
                     tooltip: {
                         // enabled: false,
                     },
-
                     datalabels: {
                         // anchor: 'end',
+                        display:false,
                         align: 'top',
                         // formatter: (value, context) => {
                         //     const datasetArray = [];
