--- a/map-luoi-dien.html
+++ b/map-luoi-dien.html
@@ -239,14 +239,15 @@
     </div>
     <br />
     <div class="step-container">
-        <div class="step default  step-1"><img src="./access/ban-do.png" alt="bban-do"></div>
-        <div class="step step-6"><img src="./access/duong-day-500.png" alt="duong-day-500"></div>
-        <div class="step step-4"><img src="./access/duong-day-220.png" alt="duong-day-220"></div>
-        <div class="step step-2"><img src="./access/duong-day-110.png" alt="duong-day-110"></div>
-        <div class="step step-7"><img src="./access/tba-500.png" alt="TBA-500"></div>
-        <div class="step step-5"><img src="./access/tba-220.png" alt="TBA220"></div>
-        <div class="step step-3"><img src="./access/tba-110.png" alt="tba-110"></div>
-        <div class="step step-8"><img src="./access/nha-may-dien.png" alt="nha-may-dien"></div>
+        <div class="step default "><img src="./access/ban-do.png" alt="bban-do"></div>
+        <div class="step"><img src="./access/duong-day-500.png" alt="duong-day-500"></div>
+        <div class="step"><img src="./access/duong-day-220.png" alt="duong-day-220"></div>
+        <div class="step"><img src="./access/duong-day-110.png" alt="duong-day-110"></div>
+        <div class="step"><img src="./access/tba-500.png" alt="TBA-500"></div>
+        <div class="step"><img src="./access/tba-220.png" alt="TBA220"></div>
+        <div class="step"><img src="./access/tba-110.png" alt="tba-110"></div>
+        <div class="step"><img src="./access/nha-may-thuy-dien.png" alt="nha-may-dien"></div>
+        <div class="step"><img src="./access/nha-may-dien-mat-troi.png" alt="nha-may-dien"></div>
     </div>
 </body>
 <script>
