--- a/map-luoi-dien.html
+++ b/map-luoi-dien.html
@@ -124,6 +124,14 @@
     .step-container .step.deactive {
         display: none;
     }
+    @media(max-width:767px){
+        .goto-container {
+            position: absolute;
+            right: unset;
+            left: 10%;
+            top: 0;
+        }
+    }
 </style>
 
 <body>
