--- a/map-luoi-dien.html
+++ b/map-luoi-dien.html
@@ -130,6 +130,7 @@
             right: unset;
             left: 10%;
             top: 0;
+            width: fit-content;
         }
     }
 </style>
