--- a/map-luoi-dien.html
+++ b/map-luoi-dien.html
@@ -132,6 +132,9 @@
             top: 0;
             width: fit-content;
         }
+        .step-container .step {
+            width: fit-content;
+        }
     }
 </style>
 
